# fast_api_study

./: .env.template  .gitignore  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fastapizero/: app.py  database.py  models.py  schemas.py  security.py
fastapizero/routers/: auth.py  todos.py  users.py
fastapizero/types/: types.py
migrations/: env.py
migrations/versions/: 221ea224621d_create_todos_table.py  8ba0676faebb_create_users_table.py  aee12ee92814_created_at_and_updated_at_on_todos.py  c22c7d8eaa31_add_updated_at_column_in_user_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_settings.py  test_todos.py  test_users.py
